--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-APP_NAME=Laravel
+APP_NAME=ooo
 APP_ENV=local
 APP_KEY=base64:jeh7hnoAmnE0n9QMGEQ3V+VAVWWnfWBPwpjJ2o2AsmI=
 APP_DEBUG=true
@@ -11,7 +11,7 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=laravel
+DB_DATABASE=ooo
 DB_USERNAME=root
 DB_PASSWORD=
 
